--- a/bdm/index.html
+++ b/bdm/index.html
@@ -5,11 +5,11 @@
     
         <title>Bobby233的个人网站</title>
         <link rel="icon" href="../pic/favicon.ico" type="images/x-ico">
-        <link rel="stylesheet" href="../bdm.css" type="text/css">
+        <link rel="stylesheet" href="https://bobby233.github.io/bdm.css" type="text/css">
     </head>
     <body>
         <h1 style="text-align: center;">Bobby233的个人网站</h1>
-        <p style="text-align: center;">简体中文 | <a href="#" target="_blank" id="an">English</a></p>
+        <p style="text-align: center;">简体中文 | <a href="../en/bdm/" id="an">English</a></p>
         <hr>
 
         <div class="nav">
@@ -24,7 +24,7 @@
         <div>
             <h3 id="arttit">简介</h3>
             <p id="artpar">
-                看到这个网站的UI了吗？很炫酷吧。这就是使用BDM(Bobby Dark Mode)写出的HTML，BDM十分易用，只需要复制style的代码即可立即开始使用。最新版本为v0.0.0初始版，如有不足请向<a href="#devs" id="an">开发者</a>提出建议。<br><br>
+                看到这个网站的UI了吗？很炫酷吧。这就是使用BDM(Bobby Dark Mode)写出的HTML，BDM十分易用，只需要复制style的代码或者远程调用CSS即可立即开始使用。最新版本为v0.0.0初始版，如有不足请向<a href="#devs" id="an">开发者</a>提出建议。<br><br>
                 由于BDM的独特<a href="#opensrc" id="an">开源许可</a>，只有在网页脚注（footer）部分标明UI by BDM（BDM有超链接）或UI powered by BDM的才可以开源使用BDM，如果看到没有标注却使用类似UI的网站，请立即向<a href="#devs" id="an">开发者</a>报告。
             </p>
             <h3 id="arttit">配色</h3>
@@ -93,7 +93,7 @@ button {
             </p>
             <h3 id="arttit">简单使用</h3>
             <p id="artpar">
-                <pre style="margin-left: 8%;">&lt;link rel="stylesheet" href="//bobby233.github.io/bdm.css" type="text/css"&gt</pre>
+                <pre style="margin-left: 8%;">&lt;link rel="stylesheet" href="https://bobby233.github.io/bdm.css" type="text/css"&gt</pre>
             </p>
             <h3 id="arttit" class="fzxs">开发者们</h3>
             <div id="devs"></div>
