--- a/en/index.html
+++ b/en/index.html
@@ -27,6 +27,16 @@
             </p>
         </div><br>
 
+        <h2>ANIME</h2>
+        <div id="act" class="act-us">
+            <h3>LoveLive Movie Edition</h3>
+            <p>
+                A test of externel link<br>
+                The Movie Edition is like te regional plot, but this one doesn't depend on main plot much. You can watch it whenever you have watched the main plot.<br><br>
+                <a href="anime/llme.html"><button>Watch (Japanese&Chinese)</button></a>
+            </p>
+        </div><br>
+
         <h2 class="fzxs">DEVELOPERS</h2>
         <p>
             <p class="fzxs">Admin: Bobby0xE9 (<a href="mailto:mczsjzsjz@outlook.com" id="an">e-mail</a> | <a href="http://space.bilibili.com/376957286" id="an">Bilibili Homepage</a>)</p>
@@ -36,7 +46,7 @@
         <div class="footer">
             <p style="font-size: x-small;">This website uses <a href="//pages.github.com" id="fta">GitHub Pages</a> | UI by <a href="bdm" id="fta">BDM</a></p>
             <p style="text-align: center;"><img src="../pic/myface.jpg"></p>
-            <p style="text-align: center; font-size: xx-small;">希ちゃん</p>
+            <p style="text-align: center; font-size: xx-small;" lang="ja">希ちゃん</p>
         </div>
 
         <!-- Ready for <audio src="https://www.csgola.com/Public/csgo_music/danielsadowski_03/mainmenu.mp3" autoplay="autoplay" controls="controls">抱歉，您的浏览器不支持HTML5音频播放 :(</audio> -->
