--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
             </p>
         </div><br>
 
-        <h2>番剧</h2>
-        <div id="act" class="act-us">
-            <h3>LoveLive剧场版</h3>
-            <p>
-                外链播放视频测试<br>
-                剧场版可以说是支线剧情，但是这个剧场版和主线的关系不大，可以放心观看<br><br>
-                <a href="anime/llme.html"><button>前往观看</button></a>
-            </p>
-        </div><br>
-
         <h2 class="fzxs">开发者们</h2>
         <p>
             <p class="fzxs">站长：Bobby0xE9 (<a href="mailto:mczsjzsjz@outlook.com" id="an">发邮件</a> | <a href="http://space.bilibili.com/376957286" id="an">B站主页</a>)</p>
@@ -46,7 +36,7 @@
         <div class="footer">
             <p style="font-size: x-small;">本网站使用<a href="//pages.github.com" id="fta">GitHub Pages</a> | UI by <a href="bdm" id="fta">BDM</a></p>
             <p style="text-align: center;"><img src="pic/myface.jpg"></p>
-            <p style="text-align: center; font-size: xx-small;" lang="ja">希ちゃん</p>
+            <p style="text-align: center; font-size: xx-small;">希ちゃん</p>
         </div>
 
         <!-- Ready for <audio src="https://www.csgola.com/Public/csgo_music/danielsadowski_03/mainmenu.mp3" autoplay="autoplay" controls="controls">抱歉，您的浏览器不支持HTML5音频播放 :(</audio> -->
