--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
         </p>
 
         <hr>
+        <h2>一些站长的进度</h2>
+        <p>数学讲题总进度</p>
+        <progress value="15" max="40"></progress>
+        <p>数学讲题至本组的进度</p>
+        <progress value="15" max="25"></progress>
+        <p>本组讲题进度</p>
+        <progress value="0" max="4"></progress>
+        <p>做数学题进度</p>
+        <progress value="16" max="40"></progress>
+        <p>语文阅读进度</p>
+        <progress value="14" max="40"></progress>
+        <p>作文总进度</p>
+        <progress value="0" max="3"></progress>
+        <p>英语卷子进度</p>
+        <progress value="0" max="16"></progress>
+        <p>英语默写进度</p>
+        <progress value="0" max="62"></progress>
+        <p>总进度</p>
+        <progress value="30" max="165"></progress>
+        <p>暑假进度</p>
+        <progress value="29" max="62"></progress>
+
+        <hr>
         <div class="footer">
             <p style="font-size: x-small;">本网站使用<a href="//pages.github.com" id="fta">GitHub Pages</a> | UI by <a href="bdm" id="fta">BDM</a></p>
             <p style="text-align: center;"><img src="pic/myface.jpg"></p>
