--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
         <hr>
         <h2>一些站长的进度</h2>
         <p>数学讲题总进度</p>
-        <progress value="15" max="40"></progress>
-        <p>数学讲题至本组的进度</p>
-        <progress value="15" max="25"></progress>
-        <p>本组讲题进度</p>
+        <progress value="16" max="40"></progress>
+        <p style="color: darkred;">数学讲题至本组的进度</p>
+        <progress value="16" max="25"></progress>
+        <p style="color: red;">本组讲题进度</p>
         <progress value="0" max="4"></progress>
-        <p>做数学题进度</p>
-        <progress value="18" max="40"></progress>
-        <p>语文阅读进度</p>
-        <progress value="14" max="40"></progress>
-        <p>作文总进度</p>
+        <p style="color: darkgreen;">做数学题进度</p>
+        <progress value="19.5" max="40"></progress>
+        <p style="color: darkred;">语文阅读进度</p>
+        <progress value="15" max="40"></progress>
+        <p style="color: red;">作文总进度</p>
         <progress value="0" max="3"></progress>
-        <p>英语卷子进度</p>
+        <p style="color: red;">英语卷子进度</p>
         <progress value="0" max="16"></progress>
-        <p>英语默写进度</p>
-        <progress value="0" max="62"></progress>
-        <p>总进度</p>
-        <progress value="32" max="165"></progress>
+        <p style="color: red;">英语默写进度</p>
+        <progress value="0" max="31"></progress>
+        <p style="color: darkred;">总进度</p>
+        <progress value="34.5" max="134"></progress>
         <p>暑假进度</p>
-        <progress value="29" max="62"></progress>
+        <progress value="30" max="62"></progress>
 
         <hr>
         <div class="footer">
