--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
         </p>
 
         <hr>
-        <h2>一些站长的进度</h2>
+        <h2>一些站长的进度（停止更新）</h2>
         <p>数学讲题总进度</p>
-        <progress value="18" max="40"></progress>
-        <p style="color: darkred;">数学讲题至本组的进度</p>
-        <progress value="18" max="25"></progress>
+        <progress value="20" max="40"></progress>
+        <p style="color: red;">数学讲题至本组的进度</p>
+        <progress value="20" max="25"></progress>
         <p style="color: red;">本组讲题进度</p>
         <progress value="0" max="4"></progress>
         <p style="color: darkgreen;">做数学题进度</p>
-        <progress value="20.5" max="40"></progress>
+        <progress value="21" max="40"></progress>
         <p style="color: darkred;">语文阅读进度</p>
-        <progress value="15.5" max="40"></progress>
+        <progress value="16" max="40"></progress>
         <p style="color: red;">作文总进度</p>
         <progress value="0" max="3"></progress>
         <p style="color: red;">英语卷子进度</p>
         <progress value="0" max="16"></progress>
         <p style="color: red;">英语默写进度</p>
         <progress value="0" max="31"></progress>
-        <p style="color: darkred;">总进度</p>
-        <progress value="36" max="134"></progress>
+        <p style="color: red;">总进度</p>
+        <progress value="37" max="134"></progress>
         <p>暑假进度</p>
-        <progress value="32" max="62"></progress>
+        <progress value="34" max="62"></progress>
 
         <hr>
         <div class="footer">
