--- a/bdm/index.html
+++ b/bdm/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-        <title>Bobby233的个人网站</title>
+        <title>BDM技术</title>
         <link rel="icon" href="../pic/favicon.ico" type="images/x-ico">
         <link rel="stylesheet" href="https://bobby233.github.io/bdm.css" type="text/css">
     </head>
