eBM测试及其他细节修改

--- a/bdm/index.html
+++ b/bdm/index.html
@@ -13,7 +13,10 @@
         <hr>
 
         <div class="nav">
-            <button id="btnon">BDM</button><br>
+            <button id="btnon">BDM</button>
+            <a href="../ebm/index.html">
+            <button>eBM</button>
+            </a>
         </div>
 
         <div>
@@ -99,7 +102,7 @@ button {
             <div id="devs"></div>
             <p id="artpar" class="fzxs">
                 创始人：Bobby233/Bobby0xE9 (<a href="mailto:mczsjzsjz@outlook.com" id="an">发邮件</a> | <a href="http://space.bilibili.com/376957286" id="an">B站主页</a>)<br><br>
-                细节改进：李梓迁 (<a href="mailto:liziqian99@qq.com" id="an">发邮件</a> | <a href="http://space.bilibili.com/318457694" id="an">B站主页</a> | <a href="https://www.douyu.com/liziqian" id="an">斗鱼直播间</a> | <a href="//liziqian.ml/main.html" id="an">个人网站</a>)
+                细节改进：李梓迁 (<a href="mailto:liziqian99@qq.com" id="an">发邮件</a> | <a href="http://space.bilibili.com/318457694" id="an">B站主页</a> | <a href="//liziqian.ml/main.html" id="an">个人网站</a>)
             </p>
         </div>
         <a href="../"><button>< 返回主页</button></a>
