--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     </head>
     <body>
         <h1 style="text-align: center;">Bobby233的个人网站</h1>
-		<p style="text-align: center;">简体中文 | <a href="en" id="an">English</a> | <a href="in" id="an">Inisiüm</a></p>
+		<p style="text-align: center;">简体中文 | <a href="en/index.html" id="an" title="英语界面暂时停止维护" style="color: red;">English</a> | <a href="in/index.html" id="an">Inisiüm</a></p>
         <hr>
 
         <div class="nav">
-            <a href="bdm">
+            <a href="bdm/index.html">
             <button>BDM</button>
             </a>
-            <a href="shn">
-            <button>SHN</button>
+            <a href="ebm/index.html">
+            <button>eBM</button>
             </a><br>
         </div>
 
@@ -26,14 +26,14 @@
             <h3>BDM(Bobby Dark Mode)</h3>
             <p>
                 比传统Dark Mode更加美观的配色和排版方案<br><br>
-                <a href="bdm">了解更多 ></a>
+                <a href="bdm/index.html">了解更多 ></a>
             </p>
         </div>
         <div id="act">
-            <h3>SHN(Star Hyper Network)恒星超级网络</h3>
+            <h3>eBM(easy BanguMi)</h3>
             <p>
-                这是一个由站长一人完成的社工库项目，这个项目很神秘，很符合黑客气质<br><br>
-                <a href="https://github.com/bobby233/SHN">GitHub ></a><a href="https://github.com/bobby233/SHN/blob/master/%E6%81%92%E6%98%9F%E8%B6%85%E7%BA%A7%E7%BD%91%E7%BB%9C%E8%AE%A1%E5%88%92.docx" style="margin-left: 30px;">查看文档 ></a>
+                更加简单的免费看番渠道（包括B站大会员番剧），设计初衷竟然只是为了让iOS6设备看上番剧……<br><br>
+                <a href="ebm/index.html">前往体验 ></a>
             </p>
         </div><br>
 
@@ -44,7 +44,7 @@
 
 		<hr>
         <div class="footer">
-            <p style="font-size: x-small;">本网站使用<a href="//pages.github.com" id="fta">GitHub Pages</a> | UI by <a href="bdm" id="fta">BDM</a></p>
+            <p style="font-size: x-small;">本网站使用<a href="//pages.github.com" id="fta">GitHub Pages</a> | UI by <a href="bdm/index.html" id="fta">BDM</a></p>
             <p style="text-align: center;"><img src="pic/myface.jpg"></p>
             <p style="text-align: center; font-size: xx-small;">希ちゃん</p>
         </div>
