--- a/ebm/nhs/index.html
+++ b/ebm/nhs/index.html
@@ -162,7 +162,7 @@
                     <div class="media-info-inner">
                         <div class="media-preview">
                             <div class="common-lazy-img">
-                                <img alt src="https://img.moegirl.org.cn/common/e/e8/%E8%99%B9%E5%9B%A2%E5%8A%A8%E7%94%BB%28%E5%B8%A6logo%29.jpg" style="height: 100%; width: 100%; border-radius: 4px;">
+                                <img alt src="https://img.moegirl.org.cn/common/e/e8/虹团动画%28带logo%29.jpg" style="height: 100%; width: 100%; border-radius: 4px;">
                             </div>
                         </div>
                         <div class="media-info-r">
