bug finally fix

--- a/ebm/index.html
+++ b/ebm/index.html
@@ -141,7 +141,7 @@
                 <div class="bangumi-item-wrap">
                     <a href="nhs/index.html" title="Love Live！虹咲学园学园偶像同好会" class="left-img">
                         <div class="lazy-img">
-                            <img alt src="https://img.moegirl.org.cn/common/e/e8/虹团动画%28带logo%29.jpg" style="height: 100%; width: 100%;">
+                            <img alt src="nhs.jpg" style="height: 100%; width: 100%;">
                         </div>
                     </a>
                     <div class="right-info">
