Add bangumi Blend S

--- a/ebm/index.html
+++ b/ebm/index.html
@@ -126,7 +126,7 @@
 
         <div>
             <p id="artpar">
-                站长Bobby233的iPod 4实在是太厉害了，经过了一番刷机，它终于又可以依靠iOS6.1.6继续使用了。但是，很多应用程序都不可以安装，所以站长有了一个奇妙的想法，使用它看番！那么以下就是为了这想法开发的看番工具eBM，里面只有一部测试用的番剧，请欣赏吧！
+                站长Bobby233的iPod 4实在是太厉害了，经过了一番刷机，它终于又可以依靠iOS6.1.6继续使用了。但是，很多应用程序都不可以安装，所以站长有了一个奇妙的想法，使用它看番！那么以下就是为了这想法开发的看番工具eBM，里面只有两部测试用的番剧，请欣赏吧！
             </p>
             <p id="artpar">
                 还有，这些资源都是来自<a href="http://www.imomoe.ai" id="an" title="_blank">樱花动漫</a>的，只不过那里的播放器有很多广告，这里的播放器把广告去除，给配置不是很好的机器更纯净和流畅的体验。并且，B站的播放器可能会消耗很多系统资源的原因可能是由于弹幕太多，所以这里的播放器也没有使用弹幕的提取，如果想看弹幕，请自行前往B站观看。
@@ -272,6 +272,119 @@
                             <li class="ep-sub">
                                 <a href="nhs/ep13/index.html">
                                     <div title="13 实现大家梦想的地方（校园偶像季）" class="ep-item">13</div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </li><br>
+            <li class="bangumi-item">
+                <div class="bangumi-item-wrap">
+                    <a href="bds/index.html" title="属性咖啡厅" class="left-img">
+                        <div class="lazy-img">
+                            <img src="bds.png" style="height: 100%; width: 100%;">
+                        </div>
+                    </a>
+                    <div class="right-info">
+                        <div class="headline">
+                            <a href="bds/index.html" title="属性咖啡厅" class="title" id="an">属性咖啡厅</a>
+                        </div>
+                        <div class="intros">
+                            <div class="line">
+                                <div class="left-block">
+                                    <span class="label">风格：</span>
+                                    <span class="value">萌系/少女/日常/漫画改</span>
+                                </div>
+                                <div class="right-block">
+                                    <span class="label">地区：</span>
+                                    <span class="value">日本</span>
+                                </div>
+                            </div>
+                            <div class="line">
+                                <div class="left-block">
+                                    <span class="label">开播时间：</span>
+                                    <span class="value">2017-10-08</span>
+                                </div>
+                                <div class="right-block">
+                                    <span class="label">声优</span>
+                                    <span title="樱之宫莓香:和氣あず未
+日向夏帆:鬼头明里
+星川麻冬:春野杏
+天野美雨:种﨑敦美
+神崎日照:德井青空
+提诺:前野智昭
+秋月红叶:铃木达央">樱之宫莓香:和氣あず未
+日向夏帆:鬼头明里
+星川麻冬:春野杏
+天野美雨:种﨑敦美
+神崎日照:德井青空
+提诺:前野智昭
+秋月红叶:铃木达央</span>
+                                </div>
+                            </div>
+                            <div class="desc">简介：以一家咖啡厅为舞台，讲述着店员之间的交流，新人店员苺香来到了有着等各种性格特异员工的咖啡厅，在这充满特色的咖啡厅中，欢乐的打工生活由此展开！</div>
+                        </div>
+                    </div>
+                    <div id="pgc-navigate-wrap" class="grid">
+                        <ul style="padding-top: 10px;">
+                            <li class="ep-sub">
+                                <a href="bds/ep1/index.html">
+                                    <div title="1 第一份兼职" class="ep-item">1</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep2/index.html">
+                                    <div title="2 无仁义的甜品" class="ep-item">2</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep3/index.html">
+                                    <div title="3 约会后少儿不宜" class="ep-item">3</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep4/index.html">
+                                    <div title="4 后辈是大姐姐（健全）" class="ep-item">4</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep5/index.html">
+                                    <div title="5 雨后感冒" class="ep-item">5</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep6/index.html">
+                                    <div title="6 水边逸事（已成人）" class="ep-item">6</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep7/index.html">
+                                    <div title="7 香蕉草莓忙死人" class="ep-item">7</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep8/index.html">
+                                    <div title="8 偶像属性加成" class="ep-item">8</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep9/index.html">
+                                    <div title="9 掌柜赴任 姐姐来袭" class="ep-item">9</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep10/index.html">
+                                    <div title="10 我来教你" class="ep-item">10</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep11/index.html">
+                                    <div title="11 傲娇一级棒 壁咚三脚猫" class="ep-item">11</div>
+                                </a>
+                            </li>
+                            <li class="ep-sub">
+                                <a href="bds/ep12/index.html">
+                                    <div title="12 最喜欢了" class="ep-item">12</div>
                                 </a>
                             </li>
                         </ul>
