--- a/ebm/bds/ep10/index.html
+++ b/ebm/bds/ep10/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第十集：我来教你</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=01a10e57a9f9ed9fb895d3d7e7232fff,865559700" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=01a10e57a9f9ed9fb895d3d7e7232fff,865559700" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
