--- a/ebm/bds/ep4/index.html
+++ b/ebm/bds/ep4/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第四集：后辈是大姐姐（健全）</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=1354b7d7c14846448ddaa0247f3b481d,822427800" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=1354b7d7c14846448ddaa0247f3b481d,822427800" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
