--- a/ebm/index.html
+++ b/ebm/index.html
@@ -129,7 +129,7 @@
                 站长Bobby233的iPod 4实在是太厉害了，经过了一番刷机，它终于又可以依靠iOS6.1.6继续使用了。但是，很多应用程序都不可以安装，所以站长有了一个奇妙的想法，使用它看番！那么以下就是为了这想法开发的看番工具eBM，里面只有两部测试用的番剧，请欣赏吧！
             </p>
             <p id="artpar">
-                还有，这些资源都是来自<a href="http://www.imomoe.ai" id="an" title="_blank">樱花动漫</a>的，只不过那里的播放器有很多广告，这里的播放器把广告去除，给配置不是很好的机器更纯净和流畅的体验。并且，B站的播放器可能会消耗很多系统资源的原因可能是由于弹幕太多，所以这里的播放器也没有使用弹幕的提取，如果想看弹幕，请自行前往B站观看。
+                还有，这些资源都是来自<a href="http://www.imomoe.ai" id="an" target="_blank">樱花动漫</a>的，只不过那里的播放器有很多广告，这里的播放器把广告去除，给配置不是很好的机器更纯净和流畅的体验。并且，B站的播放器可能会消耗很多系统资源的原因可能是由于弹幕太多，所以这里的播放器也没有使用弹幕的提取，如果想看弹幕，请自行前往B站观看。
             </p>
             <p id="artpar">
                 另外，如果有什么意见或建议的话，请<a href="mailto:mczsjzsjz@outlook.com" id="an">发邮件</a>告知站长，我也会认真阅读并改进的。
