--- a/ebm/bds/ep12/index.html
+++ b/ebm/bds/ep12/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第十二集：最喜欢了</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=bbc5a900ac769812b88e659df6567ffa,880444400" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=bbc5a900ac769812b88e659df6567ffa,880444400" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
