--- a/ebm/bds/ep2/index.html
+++ b/ebm/bds/ep2/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第二集：无仁义的甜品</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=2e7b51a304fed9478b7069dcacfe5300,813865600" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=2e7b51a304fed9478b7069dcacfe5300,813865600" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
