--- a/ebm/bds/ep5/index.html
+++ b/ebm/bds/ep5/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第五集：雨后感冒</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=02a3bc5af44ffa000444738b3e248b9c,829204200" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=02a3bc5af44ffa000444738b3e248b9c,829204200" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
