--- a/ebm/bds/ep6/index.html
+++ b/ebm/bds/ep6/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第六集：水边逸事（已成人）</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=b0e391ee807a1ff557459f68d4ebc01f,836149100" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=b0e391ee807a1ff557459f68d4ebc01f,836149100" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
