--- a/ebm/bds/ep7/index.html
+++ b/ebm/bds/ep7/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第七集：草莓香蕉忙死人</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=842e8971ef6a9bacabd36a0c9097b5f7,843210000" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=842e8971ef6a9bacabd36a0c9097b5f7,843210000" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
