--- a/ebm/bds/ep8/index.html
+++ b/ebm/bds/ep8/index.html
@@ -20,7 +20,7 @@
         </div><br>
 
         <h1>属性咖啡厅-第八集：偶像属性加成</h1>
-        <iframe src="http://v.jialingmm.net/qy.php?id=b837101c66b7539cf96a3e3118276ccf,850484300" width="100%" allowfullscreen id="eframe"></iframe>
+        <a href="http://v.jialingmm.net/qy.php?id=b837101c66b7539cf96a3e3118276ccf,850484300" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
         <script type="text/javascript">
             var factor = 0.568;
             var ht = window.innerWidth * 0.568;
