播放器内嵌入iframe

--- a/ebm/bds/ep1/index.html
+++ b/ebm/bds/ep1/index.html
@@ -20,9 +20,8 @@
         </div><br>
 
         <h1>属性咖啡厅-第一集：第一份兼职</h1>
-        <iframe src="https://www.nxflv.com/?url=a1b53bb35c408181419c6180890afc86,808805900&type=qiyi" width="100%" allow="fullscreen" id="eframe">> 前往播放器观看</iframe><br>
+        <iframe src="https://www.nxflv.com/?url=a1b53bb35c408181419c6180890afc86,808805900&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
             var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
