--- a/ebm/bds/ep2/index.html
+++ b/ebm/bds/ep2/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第二集：无仁义的甜品</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=2e7b51a304fed9478b7069dcacfe5300,813865600" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=2e7b51a304fed9478b7069dcacfe5300,813865600&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
