--- a/ebm/bds/ep3/index.html
+++ b/ebm/bds/ep3/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第三集：约会后少儿不宜</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=af268246dc192ca9d5ded0946db5cd9f,818667600" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=af268246dc192ca9d5ded0946db5cd9f,818667600&type=qiyi" width="100%" allow="fullsreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
