--- a/ebm/bds/ep7/index.html
+++ b/ebm/bds/ep7/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第七集：草莓香蕉忙死人</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=842e8971ef6a9bacabd36a0c9097b5f7,843210000" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=842e8971ef6a9bacabd36a0c9097b5f7,843210000&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
