--- a/ebm/bds/ep11/index.html
+++ b/ebm/bds/ep11/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第十一集：傲娇一级棒 壁咚三脚猫</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=b2809ec890ab57ea5288609911a2e168,872900700" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=b2809ec890ab57ea5288609911a2e168,872900700&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
