--- a/ebm/bds/ep12/index.html
+++ b/ebm/bds/ep12/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第十二集：最喜欢了</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=bbc5a900ac769812b88e659df6567ffa,880444400" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=bbc5a900ac769812b88e659df6567ffa,880444400&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
