--- a/ebm/bds/ep9/index.html
+++ b/ebm/bds/ep9/index.html
@@ -20,10 +20,10 @@
         </div><br>
 
         <h1>属性咖啡厅-第九集：掌柜赴任 姐姐来袭</h1>
-        <a href="http://v.jialingmm.net/qy.php?id=c1ab01085f523118b5579e22aeb7b95c,858072900" id="an" target="_blank" style="cursor: pointer;">> 前往播放器观看</a><br>
+        <iframe src="https://www.nxflv.com/?url=c1ab01085f523118b5579e22aeb7b95c,858072900&type=qiyi" width="100%" allow="fullscreen" id="eframe" style="border: none;"></iframe><br>
         <script type="text/javascript">
-            var factor = 0.568;
-            var ht = window.innerWidth * 0.568;
+            // factor below
+            var ht = window.innerWidth * 0.547;
             var ef = document.getElementById("eframe");
             ef.style.height = ht.toString() + "px";
         </script>
