添加番剧《魔法禁书目录 剧场版》

--- a/ebm/index.html
+++ b/ebm/index.html
@@ -81,7 +81,6 @@
             }
             .ep-sub {
                 margin-left: 6px;
-                margin-top: 6px;
                 float: left;
                 font-size: 0;
             }
@@ -126,7 +125,7 @@
 
         <div>
             <p id="artpar">
-                站长Bobby233的iPod 4实在是太厉害了，经过了一番刷机，它终于又可以依靠iOS6.1.6继续使用了。但是，很多应用程序都不可以安装，所以站长有了一个奇妙的想法，使用它看番！那么以下就是为了这想法开发的看番工具eBM，里面只有两部测试用的番剧，请欣赏吧！
+                站长Bobby233的iPod 4实在是太厉害了，经过了一番刷机，它终于又可以依靠iOS6.1.6继续使用了。但是，很多应用程序都不可以安装，所以站长有了一个奇妙的想法，使用它看番！那么以下就是为了这想法开发的看番工具eBM，里面只有站长从2021年看的番剧，仅供测试，请欣赏吧！
             </p>
             <p id="artpar">
                 还有，这些资源都是来自<a href="http://www.imomoe.ai" id="an" target="_blank">樱花动漫</a>的，只不过那里的播放器有很多广告，这里的播放器把广告去除，给配置不是很好的机器更纯净和流畅的体验。并且，B站的播放器可能会消耗很多系统资源的原因可能是由于弹幕太多，所以这里的播放器也没有使用弹幕的提取，如果想看弹幕，请自行前往B站观看。
@@ -306,7 +305,7 @@
                                     <span class="value">2017-10-08</span>
                                 </div>
                                 <div class="right-block">
-                                    <span class="label">声优</span>
+                                    <span class="label">声优：</span>
                                     <span title="樱之宫莓香:和氣あず未
 日向夏帆:鬼头明里
 星川麻冬:春野杏
@@ -385,6 +384,68 @@
                             <li class="ep-sub">
                                 <a href="bds/ep12/index.html">
                                     <div title="12 最喜欢了" class="ep-item">12</div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </li><br>
+            <li class="bangumi-item">
+                <div class="bangumi-item-wrap">
+                    <a href="mim/index.html" title="魔法禁书目录 剧场版" class="left-img">
+                        <div class="lazy-img">
+                            <img src="mim.webp" style="height: 100%; width: 100%;">
+                        </div>
+                    </a>
+                    <div class="right-info">
+                        <div class="headline">
+                            <a href="mim/index.html" title="魔法禁书目录 剧场版" class="title" id="an">魔法禁书目录 剧场版</a>
+                        </div>
+                        <div class="intros">
+                            <div class="line">
+                                <div class="left-block">
+                                    <span class="label">风格：</span>
+                                    <span class="value">科幻/校园/战斗/热血</span>
+                                </div>
+                                <div class="right-block">
+                                    <span class="label">地区：</span>
+                                    <span class="value">日本</span>
+                                </div>
+                            </div>
+                            <div class="line">
+                                <div class="left-block">
+                                    <span class="label">开播时间：</span>
+                                    <span class="value">2013-02-23</span>
+                                </div>
+                                <div class="right-block">
+                                    <span class="label">声优：</span>
+                                    <span title="上条当麻：阿部敦
+茵蒂克丝：井口裕香
+御坂美琴：佐藤利奈
+一方通行：冈本信彦
+鸣护艾丽莎：三泽纱千香
+史提尔·马格努斯：谷山纪章
+神裂火织：伊藤静
+土御门元春：胜杏里
+雷蒂丽·达古露萝德：佐仓绫音">上条当麻：阿部敦
+茵蒂克丝：井口裕香
+御坂美琴：佐藤利奈
+一方通行：冈本信彦
+鸣护艾丽莎：三泽纱千香
+史提尔·马格努斯：谷山纪章
+神裂火织：伊藤静
+土御门元春：胜杏里
+雷蒂丽·达古露萝德：佐仓绫音</span>
+                                </div>
+                            </div>
+                            <div class="desc">简介：在学园都市制作的宇宙升降机“恩底弥翁”完成在即之时，上条当麻和茵蒂克丝与拥有“奇迹”的歌声的少女鸣护阿丽莎相遇，然而阿丽莎却会引发魔法世界和科学世界之间的战争，故事也由此展开。</div>
+                        </div>
+                    </div>
+                    <div id="pgc-navigate-wrap" class="grid">
+                        <ul style="padding-top: 10px;">
+                            <li class="ep-sub">
+                                <a href="mim/who/index.html">
+                                    <div title="魔法禁书目录 恩底弥翁的奇迹" class="ep-item">全片</div>
                                 </a>
                             </li>
                         </ul>
