--- a/ebm/mim/index.html
+++ b/ebm/mim/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-        <title>属性咖啡厅-eBM</title>
+        <title>魔法禁书目录 剧场版-eBM</title>
         <link rel="icon" href="../../pic/favicon.ico" type="images/x-ico">
         <link rel="stylesheet" href="https://bobby233.github.io/bdm.css" type="text/css">
 
@@ -200,52 +200,52 @@
                     <div class="media-info-inner">
                         <div class="media-preview">
                             <div class="common-lazy-img">
-                                <img alt src="../bds.png" style="height: 100%; width: 100%; border-radius: 4px;">
+                                <img alt src="../mim.webp" style="height: 100%; width: 100%; border-radius: 4px;">
                             </div>
                         </div>
                         <div class="media-info-r">
                             <div class="media-info-title">
-                                <span class="media-info-title-t">属性咖啡厅</span>
+                                <span class="media-info-title-t">魔法禁书目录 剧场版</span>
                                 <span class="media-tags" style="opacity: 1;">
-                                    <span class="media-tag">萌系</span>
-                                    <span class="media-tag">少女</span>
-                                    <span class="media-tag">日常</span>
-                                    <span class="media-tag">漫画改</span>
+                                    <span class="media-tag">科幻</span>
+                                    <span class="media-tag">校园</span>
+                                    <span class="media-tag">战斗</span>
+                                    <span class="media-tag">热血</span>
                                 </span>
                             </div>
                             <div class="media-info-datas">
                                 <div class="media-info-count">
                                     <span class="media-info-count-item">
                                         <span class="media-info-label">B站总播放</span>
-                                        <em>3825.2万</em>
+                                        <em>809.2万</em>
                                     </span>
                                     <span class="media-info-count-item">
                                         <span class="media-info-label">B站追番人数</span>
-                                        <em>194.1万</em>
+                                        <em>488.5万</em>
                                     </span>
                                     <span class="media-info-count-item" style="border-right: none;">
                                         <span class="media-info-label">B站弹幕总数</span>
-                                        <em>110.6万</em>
+                                        <em>43万</em>
                                     </span>
                                 </div>
                                 <div class="media-info-score-wrp">
                                     <div class="media-info-score">
-                                        <div class="media-info-score-content">9.6</div>
+                                        <div class="media-info-score-content">9.0</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="media-info-time">
-                                <span>2017年10月8日开播</span>
-                                <span>已完结，全12话</span>
+                                <span>2013年2月23日开播</span>
+                                <span>已完结，全1话</span>
                             </div>
                             <div class="media-info-intro">
                                 <span>
-                                    简介：以一家咖啡厅为舞台，讲述着店员之间的交流，新人店员苺香来到了有着等各种性格特异员工的咖啡厅，在这充满特色的咖啡厅中，欢乐的打工生活由此展开！
+                                    简介：在学园都市制作的宇宙升降机“恩底弥翁”完成在即之时，上条当麻和茵蒂克丝与拥有“奇迹”的歌声的少女鸣护阿丽莎相遇，然而阿丽莎却会引发魔法世界和科学世界之间的战争，故事也由此展开。
                                 </span>
                             </div>
                             <div class="media-info-btns">
                                 <div class="bangumi-btn">
-                                    <a href="ep1/index.html"><button class="btn-watch">观看</button></a>
+                                    <a href="who/index.html"><button class="btn-watch">观看</button></a>
                                 </div>
                             </div>
                         </div>
@@ -254,63 +254,8 @@
             </div><br><br><br>
             <ul style="padding-top: 10px;">
                 <li class="ep-sub">
-                    <a href="ep1/index.html">
-                        <div title="1 第一份兼职" class="ep-item">1</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep2/index.html">
-                        <div title="2 无仁义的甜品" class="ep-item">2</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep3/index.html">
-                        <div title="3 约会后少儿不宜" class="ep-item">3</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep4/index.html">
-                        <div title="4 后辈是大姐姐（健全）" class="ep-item">4</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep5/index.html">
-                        <div title="5 雨后感冒" class="ep-item">5</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep6/index.html">
-                        <div title="6 水边逸事（已成人）" class="ep-item">6</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep7/index.html">
-                        <div title="7 香蕉草莓忙死人" class="ep-item">7</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep8/index.html">
-                        <div title="8 偶像属性加成" class="ep-item">8</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep9/index.html">
-                        <div title="9 掌柜赴任 姐姐来袭" class="ep-item">9</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep10/index.html">
-                        <div title="10 我来教你" class="ep-item">10</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep11/index.html">
-                        <div title="11 傲娇一级棒 壁咚三脚猫" class="ep-item">11</div>
-                    </a>
-                </li>
-                <li class="ep-sub">
-                    <a href="ep12/index.html">
-                        <div title="12 最喜欢了" class="ep-item">12</div>
+                    <a href="who/index.html">
+                        <div title="魔法禁书目录 恩底弥翁的奇迹" class="ep-item">全片</div>
                     </a>
                 </li>
             </ul>
