webp格式兼容问题

--- a/ebm/index.html
+++ b/ebm/index.html
@@ -394,7 +394,7 @@
                 <div class="bangumi-item-wrap">
                     <a href="mim/index.html" title="魔法禁书目录 剧场版" class="left-img">
                         <div class="lazy-img">
-                            <img src="mim.webp" style="height: 100%; width: 100%;">
+                            <img src="mim.jpg" style="height: 100%; width: 100%;">
                         </div>
                     </a>
                     <div class="right-info">
