--- a/ebm/mim/index.html
+++ b/ebm/mim/index.html
@@ -200,7 +200,7 @@
                     <div class="media-info-inner">
                         <div class="media-preview">
                             <div class="common-lazy-img">
-                                <img alt src="../mim.webp" style="height: 100%; width: 100%; border-radius: 4px;">
+                                <img alt src="../mim.jpg" style="height: 100%; width: 100%; border-radius: 4px;">
                             </div>
                         </div>
                         <div class="media-info-r">
